name:                IEC61499-Convert
version:             0.1.0.0
license:             GPL-3
author:              Fionn Cleary
maintainer:          clearyf@tcd.ie
build-type:          Simple
cabal-version:       >=1.10

executable iec61499_convert
  main-is:             Main.hs
  build-depends:       base >= 4.7
                     , base-prelude >= 0.1.19
                     , containers >= 0.5.6.2
                     , hspec >= 2.1.10
                     , hspec-core >= 2.1.10
                     , hxt >= 9.3.1.15
                     , megaparsec >= 4.1.1
                     , transformers >= 0.4.2.0
  hs-source-dirs:      src,app
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude
  default-language:    Haskell2010

test-suite test_iec61499_convert
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base >= 4.7
                     , base-prelude >= 0.1.19
                     , containers >= 0.5.6.2
                     , hspec >= 2.1.10
                     , hspec-core >= 2.1.10
                     , hxt >= 9.3.1.15
                     , megaparsec >= 4.1.1
                     , transformers >= 0.4.2.0
  hs-source-dirs:      src,test
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude
  default-language:    Haskell2010
